--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kamban - Aplicación de Tareas</title>
+    <title>Kanban - Aplicación de Tareas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="public/styles.css">
 </head>
 
 <body>
     <header>
-        <h1>Kamban - Tablero de Tareas</h1>
+        <h1>Kanban - Tablero de Tareas</h1>
     </header>
     <main>
         <section id="task-board">
