validacion de rutas

--- a/Frontend/panelPrincipal.html
+++ b/Frontend/panelPrincipal.html
@@ -12,6 +12,16 @@
     <label for="tableroId">Seleccionar Tablero:</label>
     <select id="tableroId"></select>
 
+    <label for="filtroPrioridad">Filtrar por Prioridad:</label>
+    <select id="filtroPrioridad">
+        <option value="">-- Todas --</option>
+    </select>
+
+    <label for="filtroEstado">Filtrar por Estado:</label>
+    <select id="filtroEstado">
+        <option value="">-- Todos --</option>
+    </select>
+
     <table>
         <thead>
             <tr>
