validacion de entidades y creacion de nuevo panel

--- a/Frontend/panelPrincipal.html
+++ b/Frontend/panelPrincipal.html
@@ -22,6 +22,11 @@
         <option value="">-- Todos --</option>
     </select>
 
+    <div id="detalleTablero" style="margin: 1em 0; padding: 0.5em; border: 1px solid #ccc; background: #f9f9f9;">
+        <strong>Nombre:</strong> <span id="nombreTableroDetalle"></span><br>
+        <strong>Descripción:</strong> <span id="descripcionTableroDetalle"></span>
+    </div>
+
     <table>
         <thead>
             <tr>
